# Test-INC

./: .dockerignore  .env.dist  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  feature_names.pkl  main.py  modelo_rf.pkl  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  model-retrain.yml
alembic/: env.py
alembic/versions/: db5a336076ca_crear_esquema_inicial.py
data/: Dataset_prueba.xlsx  dataset_modelado_20251117_233805.csv  dataset_modelado_20251118_000429.csv  dataset_modelado_20251118_005407.csv  dataset_modelado_20251118_005719.csv
models/: .gitignore  README.md  __init__.py  tables.py
src/: data_pipeline.py  main.py
src/app_types/: __init__.py  data.py  inference.py  monitoring.py
src/ml_models/: load.py
src/models/: tables.py
src/routes/: __init__.py  data.py  inference.py  main.py
src/services/: data.py  inference.py  monitoring.py
src/types/: __init__.py  inference.py  monitoring.py
src/utils/: logging_config.py  settings.py
test/: test_api.py
